--- a/jenkins-jobs/git-ubuntu/jobs-ci.yaml
+++ b/jenkins-jobs/git-ubuntu/jobs-ci.yaml
@@ -93,7 +93,7 @@
 
             stage ('Build') {
                 steps {
-                    sh "uvt-kvm ssh --insecure $VM_NAME -- no_proxy=launchpad.net git clone -b ${params.landing_candidate_branch} ${params.landing_candidate} git-ubuntu"
+                    sh "uvt-kvm ssh --insecure $VM_NAME -- no_proxy=launchpad.net git clone --no-tags -b ${params.landing_candidate_branch} ${params.landing_candidate} git-ubuntu"
                     sh 'uvt-kvm ssh --insecure $VM_NAME -- "cd git-ubuntu && no_proxy=launchpad.net git fetch --tags https://git.launchpad.net/usd-importer"'
                     sh 'uvt-kvm ssh --insecure "$VM_NAME" -- "cd git-ubuntu; no_proxy=canonical.com,launchpad.net,launchpadlibrarian.net sh snap.sh"'
                     sh 'scp -oStrictHostKeyChecking=no ubuntu@$(uvt-kvm ip "$VM_NAME"):/home/ubuntu/git-ubuntu/git-ubuntu_*_amd64.snap .'
