oci unit: add cassandra

--- a/jenkins-jobs/oci/unit.yaml
+++ b/jenkins-jobs/oci/unit.yaml
@@ -42,6 +42,9 @@
       - telegraf:
           namespaces:
             - ubuntu
+      - cassandra:
+          namespaces:
+            - ubuntu
     jobs:
       - oci-unit-{testcase}
       - oci-unit-{testcase}-standalone
