oci unit: add directly reachable domain to no_proxy
These are the same exceptions used in the "oci-unit-*-standalone" jobs.

The ecr.aws authentication endpoints are directly reachable but
interestingly not reachable via squid.internal. Skipping the proxy
should avoid authentication failures.

--- a/jenkins-jobs/oci/unit.yaml
+++ b/jenkins-jobs/oci/unit.yaml
@@ -145,6 +145,7 @@
             set -eufx
 
             export https_proxy=http://squid.internal:3128
+            export no_proxy=launchpad.net,amazonaws.com,ecr.aws
             export AWS_PROFILE="$DOCKER_NAMESPACE"
 
             git clone --depth 1 -b "$STSBRANCH" "$STSREPO" sts
