Add pre-commit configuration and call it from tox
tox.ini: replace the yamllint environment with a `pre-commit run
--all-files` call, which will run several hooks including yamllint.
This way running tox will still result in a full test run.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = yamllint, jjb-test, jjb-lint
+envlist = pre-commit, jjb-test, jjb-lint
 skipsdist = true
 
-[testenv:yamllint]
-deps = yamllint==1.25.0
-commands = yamllint --strict .
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [jjb-base]
 deps = jenkins-job-builder==3.2.0
