--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -47,6 +47,7 @@
           fail: true
     publishers:
       - cloud-init-archive-integration-logs
+      - email-table-flip
     builders:
       - shell: |
           #!/bin/bash
