--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -38,7 +38,7 @@
     defaults: cloud-init
     node: torkoal
     triggers:
-      - timed: '@weekly'
+      - timed: !j2: "{{ '@daily' if platform == 'lxd_container' else '@weekly' }}"
     wrappers:
       - workspace-cleanup
       - timestamps
