Add azure, gce, and oci to cloud-init jobs

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -21,6 +21,9 @@
       - lxd_container
       - lxd_vm
       - ec2
+      - azure
+      - gce
+      - oci
     release:
       - bionic
       - focal
