oci unit: add squid

--- a/jenkins-jobs/oci/unit.yaml
+++ b/jenkins-jobs/oci/unit.yaml
@@ -45,6 +45,7 @@
       - cassandra:
           namespaces:
             - ubuntu
+      - squid
     jobs:
       - oci-unit-{testcase}
       - oci-unit-{testcase}-standalone
