Revert "Fix cloud-init integration proposed"
The variable in curly brances is a JJB template variable, and it's never
seen by the shell.

This reverts commit e0f3e3d325e9ffb3a2a780938ae4063983ad9b27.

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -85,7 +85,7 @@
               repourl="http://archive.ubuntu.com/ubuntu"
               suite={release}-proposed
 
-              pversion=$(rmadison --suite ${release}-proposed cloud-init)
+              pversion=$(rmadison --suite {release}-proposed cloud-init)
               if [[ -z $pversion ]]; then
                   echo "No cloud-init source package found for $suite"
                   exit 0
