curtin: do not archive the cloud-init named pipe
Workaround for https://issues.jenkins.io/browse/JENKINS-28253

--- a/jenkins-jobs/curtin/default.yaml
+++ b/jenkins-jobs/curtin/default.yaml
@@ -41,7 +41,7 @@
     publishers:
       - archive:
           artifacts: 'output/**'
-          excludes: 'output/debug.log, **/*img'
+          excludes: 'output/debug.log, **/*.img, **/hook-hotplug-cmd'
 
 - publisher:
     name: email-curtin-qa
