c-i: built cloud-init-copr-build-stable-19.4 weekly
The branch is frozen, so daily builds aren't really necessary.

--- a/jenkins-jobs/cloud-init/centos.yaml
+++ b/jenkins-jobs/cloud-init/centos.yaml
@@ -38,7 +38,7 @@
     defaults: cloud-init
     node: torkoal
     triggers:
-      - timed: "@daily"
+      - timed: "@weekly"
     publishers:
       - email-server-crew-qa
       - trigger:
