c-i: include the curtin-cloud-init-sru job in the cloud-init view
The change also covers other FOO-cloud-init-BAR jobs we may add in the
future.

Note: Java matches() matches the entire string, adding ^$ to the regexp
do not make the condition any stricter, and are therefore not needed.

--- a/jenkins-jobs/cloud-init/views.yaml
+++ b/jenkins-jobs/cloud-init/views.yaml
@@ -20,4 +20,4 @@
     view-type: list
     description: |
       cloud-init unit and integration testing
-    regex: '^cloud-init-.*'
+    regex: '(.+-)?cloud-init-.*'
