--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -48,6 +48,13 @@
       - timeout:
           timeout: 180
           fail: true
+      - credentials-binding:
+          - file:
+              credential-id: gcp-application-credentials
+              variable: GOOGLE_APPLICATION_CREDENTIALS
+          - text:
+              credential-id: gcp-project
+              variable: GOOGLE_CLOUD_PROJECT
     publishers:
       - cloud-init-archive-integration-logs
     builders:
