--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -156,9 +156,7 @@
           export CLOUD_INIT_LOCAL_LOG_PATH
 
           cd cloud-init
-          # -vv --showlocals to show the full contents of variable in failed
-          # asserts, without ellipsis.
-          tox -e integration-tests-jenkins -- -vv --showlocals tests/integration_tests
+          tox -e integration-tests-jenkins -- -v --showlocals tests/integration_tests
 
 
 - publisher:
