c-i integration: set https_proxy (and no_proxy for LP)
Required to reach the GCP api endpoints.

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -63,6 +63,9 @@
 
           set -eux -o pipefail
 
+          export https_proxy=http://squid.internal:3128
+          export no_proxy=launchpad.net
+
           function cleanup {{
               if [[ -n ${{container:-}} ]]; then
                   ! lxc info "$container" &>/dev/null || lxc stop "$container"
