curtin ci: add timeouts
The slowest successful run takes about 20 minutes on arm64. A one hour
timeout should safely save us from stuck fovered jobs.

--- a/jenkins-jobs/curtin/jobs-ci.yaml
+++ b/jenkins-jobs/curtin/jobs-ci.yaml
@@ -107,6 +107,9 @@
     wrappers:
       - timestamps
       - workspace-cleanup
+      - timeout:
+          timeout: 60
+          fail: true
     builders:
       - vmtest-sync-images
       - shell: |
@@ -176,6 +179,9 @@
     wrappers:
       - timestamps
       - workspace-cleanup
+      - timeout:
+          timeout: 60
+          fail: true
     builders:
       - vmtest-sync-images
       - shell: |
