curtin-ci: archive results via curtin-archive-results
The curtin-archive-results publisher has an exclude on **/hook-hotplug-cmd
which works around https://issues.jenkins.io/browse/JENKINS-28253. It it
also better in general to use that publisher instead of re-defining one.

--- a/jenkins-jobs/curtin/jobs-ci.yaml
+++ b/jenkins-jobs/curtin/jobs-ci.yaml
@@ -82,10 +82,7 @@
       - merge-proposal
     auth-token: BUILD_ME
     publishers:
-      - archive:
-          artifacts: 'output/**'
-          excludes: 'output/debug.log, **/*img'
-          allow-empty: true
+      - curtin-archive-results
       - trigger-parameterized-builds:
           - project: admin-lp-git-vote
             condition: UNSTABLE_OR_WORSE
