cii: allow for skipping non-lts releases on some platform
Releases can have a 'release-lts' flag that makes it easy to exclude
them using an 'exclude' stanza [1].

Also skip Jammy on Oracle for the moment as images are not available yet.
A better way would be checking for the availability of an image on a
given platform and mark the job as "unstable" (yellow) if there's no
image. This is however out of the scope of this change.

[1] https://docs.openstack.org/infra/jenkins-job-builder/definition.html#project

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -17,19 +17,28 @@
 
 - project:
     name: cloud-init-integration-pytest
+    release:
+      - bionic:
+          release-is-lts: true
+      - focal:
+          release-is-lts: true
+      - hirsute
+      - impish
+      - jammy:
+          release-is-lts: true
     platform:
       - lxd_container
       - lxd_vm
       - ec2
       - azure
       - gce
-      - oci
-    release:
-      - bionic
-      - focal
-      - hirsute
-      - impish
-      - jammy
+      - oci:
+          platform-lts-only: true
+    exclude:
+      - release-is-lts: false
+        platform-lts-only: true
+      - release: jammy
+        platform: oci
     source:
       - daily
       - proposed
