metrics: drop Daniel from the email recipients

--- a/jenkins-jobs/metrics/default.yaml
+++ b/jenkins-jobs/metrics/default.yaml
@@ -39,4 +39,4 @@
           num-to-keep: 25
     publishers:
       - email:
-          recipients: paride.legovini@canonical.com, daniel.watkins@canonical.com
+          recipients: paride.legovini@canonical.com
