metrics: use a randomized hourly trigger

--- a/jenkins-jobs/metrics/default.yaml
+++ b/jenkins-jobs/metrics/default.yaml
@@ -27,7 +27,7 @@
         *** STOP ***
     node: metal-amd64
     triggers:
-      - timed: "H * * * *"
+      - timed: '@hourly'
     wrappers:
       - workspace-cleanup
       - timestamps
