Use yaml anchors to make jobs inherit the global defaults (#226)
This reduces duplication in the 'defaults' stanzas. For this change we
need to set:

  retain_anchors=True

in jenkins_jobs.ini, which in general will allow us to make more use of
anchors and aliases.

--- a/jenkins-jobs/_common/default.yaml
+++ b/jenkins-jobs/_common/default.yaml
@@ -15,16 +15,18 @@
 # along with this program; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
 
-- defaults:
+- defaults: &defaults-common
     name: global
     description: |
         Ubuntu Server QA Jenkins Job
 
         *** STOP ***
-        Do NOT edit this job through the web
-        This job is managed by Jenkins Job Builder and stored on Github via the URL below:
+        Do NOT edit this job through the web!
+        This job is managed by Jenkins Job Builder and stored on GitHub via the URL below:
         https://github.com/canonical/server-jenkins-jobs
         *** STOP ***
     properties:
       - build-discarder:
           num-to-keep: 3
+    publishers:
+      - email-server-crew-qa
