--- a/jenkins-jobs/daily-triage/default.yaml
+++ b/jenkins-jobs/daily-triage/default.yaml
@@ -22,14 +22,7 @@
 
 - defaults:
     name: daily-triage
-    description: |
-      Ubuntu Server QA Jenkins Job
-
-      *** STOP ***
-      Do NOT edit this job through the web
-      This job is managed by Jenkins Job Builder and stored on Github via the URL below:
-      https://github.com/canonical/server-jenkins-jobs
-      *** STOP ***
+    <<: *defaults-common
     properties:
       - build-discarder:
           num-to-keep: 30
