--- a/jenkins-jobs/metrics/default.yaml
+++ b/jenkins-jobs/metrics/default.yaml
@@ -17,14 +17,7 @@
 
 - defaults:
     name: metrics
-    description: |
-        Metrics Ubuntu Server QA Jenkins Job
-
-        *** STOP ***
-        Do NOT edit this job through the web
-        This job is managed by Jenkins Job Builder and stored on Github via the URL below:
-        https://github.com/canonical/server-jenkins-jobs
-        *** STOP ***
+    <<: *defaults-common
     node: metal-amd64
     triggers:
       - timed: '@hourly'
