--- a/jenkins-jobs/proposed/default.yaml
+++ b/jenkins-jobs/proposed/default.yaml
@@ -17,19 +17,10 @@
 
 - defaults:
     name: proposed
-    description: |
-        Proposed Ubuntu Server QA Jenkins Job
-
-        *** STOP ***
-        Do NOT edit this job through the web
-        This job is managed by Jenkins Job Builder and stored on Github via the URL below:
-        https://github.com/canonical/server-jenkins-jobs
-        *** STOP ***
+    <<: *defaults-common
     node: metal-amd64
     triggers:
       - timed: "H 1 * * *"
     properties:
       - build-discarder:
           num-to-keep: 25
-    publishers:
-      - email-server-crew-qa
