c-i: define cloud-init-pycloudlib.toml secret file

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -66,6 +66,9 @@
           - text:
               credential-id: gcp-project
               variable: GOOGLE_CLOUD_PROJECT
+          - file:
+              credential-id: cloud-init-pycloudlib-config
+              variable: PYCLOUDLIB_CONFIG
     publishers:
       - cloud-init-archive-integration-logs
     builders:
