oci: drop lts/redis: lts images are not produced anymore

--- a/jenkins-jobs/oci/unit.yaml
+++ b/jenkins-jobs/oci/unit.yaml
@@ -23,7 +23,9 @@
       - lts
     testcase:
       - postgres
-      - redis
+      - redis:
+          namespaces:
+            - ubuntu
       - mysql
       - nginx
       - prometheus:
