cii: add microsoftonline.com to no_proxy
We have direct access, and *no* access via proxy.

--- a/jenkins-jobs/cloud-init/integration.yaml
+++ b/jenkins-jobs/cloud-init/integration.yaml
@@ -116,7 +116,7 @@
           set -eux -o pipefail
 
           export https_proxy=http://squid.internal:3128
-          export no_proxy=launchpad.net,ubuntu.com,canonical.com
+          export no_proxy=launchpad.net,ubuntu.com,canonical.com,microsoftonline.com
 
           export CLOUD_INIT_PLATFORM={platform}
           export CLOUD_INIT_OS_IMAGE={release}
