oci unit: add bind9 (ubuntu/ only for now)

--- a/jenkins-jobs/oci/unit.yaml
+++ b/jenkins-jobs/oci/unit.yaml
@@ -49,6 +49,9 @@
           namespaces:
             - ubuntu
       - squid
+      - bind9:
+          namespaces:
+            - ubuntu
     jobs:
       - oci-unit-{testcase}
       - oci-unit-{testcase}-standalone
