Switch CentOS 8 to CentOS Stream 8
Centos 8 went EOL over a month ago, and it looks like this job is
failing due to repo issues. The job passes locally when using CentOS
Stream, switch to that.

Also add CentOS Stream 9. This test currently fails (ignore for now).
The fix requires updating tools in cloud-init which select dependencies
(package epel-release changes), see here[1] for more details:

[1] https://docs.fedoraproject.org/en-US/epel/

--- a/jenkins-jobs/cloud-init/centos.yaml
+++ b/jenkins-jobs/cloud-init/centos.yaml
@@ -84,14 +84,24 @@
           for i in 0 5m 30m 1h; do sleep $i; $retry_cmd && s=0 && break || s=$?; done; (exit $s)
 
 - job:
-    name: cloud-init-copr-test
+    name: cloud-init-copr-test-centos-stream-9
     defaults: cloud-init
     node: torkoal
     wrappers:
       - workspace-cleanup
     builders:
       - copr-test:
-          centos_version: 8
+          centos_version: 9-Stream
+
+- job:
+    name: cloud-init-copr-test-centos-stream-8
+    defaults: cloud-init
+    node: torkoal
+    wrappers:
+      - workspace-cleanup
+    builders:
+      - copr-test:
+          centos_version: 8-Stream
 
 - job:
     name: cloud-init-copr-test-stable-19.4
